@@ -1,3 +1,11 @@
+2006-06-06  David Reveman  <davidr@novell.com>
+
+	* src/event.c (handleEvent): Track XA_WM_CLASS property changes.
+
+	* src/window.c:
+	* include/compiz.h: remove updateWindowClass and update
+	updateWindowClassHints.
+
 2006-06-02  David Reveman  <davidr@novell.com>
 
 	* configure.ac: Bump version to 0.0.12.
